--- a/accueil.html
+++ b/accueil.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="/css/main.css"> 
+        <link rel="stylesheet" href="sass/style.css"> 
         <script src="https://kit.fontawesome.com/9389dccd37.js" crossorigin="anonymous"></script>
         <title>Ohmyfood</title>
     </head>
     <body>
-
+    
     </body>
 </html>
