--- a/menu-àlafrançaise.html
+++ b/menu-àlafrançaise.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <header>
-            <h1 class="logo">Ohmyfood</h1>
+            <h1 class="logo">
+                <a href="accueil.html"><i class="fa-solid fa-arrow-left"></i></a>
+                Ohmyfood
+            </h1>
         </header>
     </body>
 </html>
