Mise en place section "découverte"

--- a/accueil.html
+++ b/accueil.html
@@ -9,7 +9,22 @@
     </head>
     <body>
         <header>
-            <h1 class="logo">Ohmyfood</h1>
+            <h1 class="logo">ohmyfood</h1>
         </header>
+        <main>
+            <section class="search">
+                <p class="location">
+                    <i class="fa-solid fa-location-dot"></i>
+                    Paris, Belleville
+                </p>
+                <div class="discovery">
+                    <h2 class="discovery_heading">Réservez le menu qui vous convient</h2>
+                    <p class="discovery_paragraph">
+                        Découvrez des restaurants d'exception, sélectionnés par nos soins
+                    </p>
+                    <button  class="discovery_btn"><a href="#">Explorer nos restaurants</a></button>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
