--- a/menu-àlafrançaise.html
+++ b/menu-àlafrançaise.html
@@ -11,7 +11,7 @@
         <header>
             <h1 class="logo">
                 <a href="accueil.html"><i class="fa-solid fa-arrow-left"></i></a>
-                Ohmyfood
+                ohmyfood
             </h1>
         </header>
     </body>
