Mise en place section "Fonctionnement"

--- a/accueil.html
+++ b/accueil.html
@@ -25,6 +25,29 @@
                     <button  class="discovery_btn"><a href="#">Explorer nos restaurants</a></button>
                 </div>
             </section>
+            <section class="functioning">
+                <h2 class="functioning_heading">Fonctionnement</h2>
+                <ul>
+                    <li>
+                        <i class="circle fa-solid fa-circle"></i>
+                        <i class="number fa-regular fa-1"></i>
+                        <i class="icon fa-solid fa-mobile-screen"></i>
+                        Choisissez un restaurant
+                    </li>
+                    <li>
+                        <i class="circle fa-solid fa-circle"></i>
+                        <i class="number fa-regular fa-2"></i>
+                        <i class="icon fa-solid fa-list"></i>
+                        Composez votre menu
+                    </li>
+                    <li>
+                        <i class="circle fa-solid fa-circle"></i>
+                        <i class="number fa-regular fa-3"></i>
+                        <i class="icon fa-solid fa-store"></i>
+                        Dégustez au restaurant
+                    </li>
+                </ul>
+            </section>
         </main>
     </body>
 </html>
