--- a/accueil.html
+++ b/accueil.html
@@ -48,6 +48,53 @@
                     </li>
                 </ul>
             </section>
+            <section class="restaurant-menu">
+                <h2 class="restaurant-menu_heading">Restaurants</h2>
+                <div class="restaurant-menu_content">
+                    <article>
+                        <a href="menu-la-palette-du-gout.html">
+                            <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington">
+                            <span>Nouveau</span>
+                            <h3>La palette du goût</h3>
+                            <p>
+                                Menilmontant
+                            </p>
+                            <i class="fa-regular fa-heart"></i>
+                        </a>
+                    </article>
+                    <article>
+                        <a href="menu-la-note-enchantee.html">
+                            <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil">
+                            <span>Nouveau</span>
+                            <h3>La note enchantée</h3>
+                            <p>
+                                Charonne
+                            </p>
+                            <i class="fa-regular fa-heart"></i>
+                        </a>
+                    </article>
+                    <article>
+                        <a href="menu-a-la-francaise.html">
+                            <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba">
+                            <h3>À la française</h3>
+                            <p>
+                                Cité Rouge
+                            </p>
+                            <i class="fa-regular fa-heart"></i>
+                        </a>
+                    </article>
+                    <article>
+                        <a href="menu-le-delice-des-sens.html">
+                            <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel">
+                            <h3>Le délice des sens</h3>
+                            <p>
+                                Folie-Méricourt
+                            </p>
+                            <i class="fa-regular fa-heart"></i>
+                        </a>
+                    </article>
+                </div>
+            </section>
         </main>
     </body>
 </html>
