--- a/accueil.html
+++ b/accueil.html
@@ -96,5 +96,19 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <h3 class="logo">ohmyfood</h3>
+            <p>
+                <i class="fa-solid fa-utensils"></i>
+                <a href="#">Proposer un restaurant</a>
+                <br>
+                <i class="fa-solid fa-handshake-angle"></i>
+                <a href="#">Devenir partenaire</a>
+                <br>
+                <a href="#">Mentions légales</a>
+                <br>
+                <a href="mailto:ohmyfood@gmail.fr">Contact</a>
+            </p>
+        </footer>
     </body>
 </html>
