Création nouveau fichier compilation css

--- a/accueil.html
+++ b/accueil.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="sass/style.css"> 
+        <link rel="stylesheet" href="css/style.css"> 
         <script src="https://kit.fontawesome.com/9389dccd37.js" crossorigin="anonymous"></script>
         <title>Ohmyfood</title>
     </head>
@@ -22,7 +22,7 @@
                     <p class="discovery_paragraph">
                         Découvrez des restaurants d'exception, sélectionnés par nos soins
                     </p>
-                    <button  class="discovery_btn"><a href="#">Explorer nos restaurants</a></button>
+                    <button class="discovery_btn"><a href="#">Explorer nos restaurants</a></button>
                 </div>
             </section>
             <section class="functioning">
