--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="sass/style.css"> 
+        <link rel="stylesheet" href="css/style.css"> 
         <script src="https://kit.fontawesome.com/9389dccd37.js" crossorigin="anonymous"></script>
         <title>Ohmyfood</title>
     </head>
