--- a/accueil.html
+++ b/accueil.html
@@ -8,6 +8,7 @@
         <title>Ohmyfood</title>
     </head>
     <body>
+        <div class="load"></div>
         <header>
             <h1 class="logo">ohmyfood</h1>
         </header>
