Ajout animations/autoprefixer+modification naming

--- a/accueil.html
+++ b/accueil.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/style.css"> 
+        <link rel="stylesheet" href="css/prefixed/style.css">
         <script src="https://kit.fontawesome.com/9389dccd37.js" crossorigin="anonymous"></script>
         <title>Ohmyfood</title>
     </head>
@@ -14,37 +14,37 @@
         </header>
         <main>
             <section class="search">
-                <p class="location">
+                <p class="search_position">
                     <i class="fa-solid fa-location-dot"></i>
                     Paris, Belleville
                 </p>
-                <div class="discovery">
-                    <h2 class="discovery_heading">Réservez le menu qui vous convient</h2>
-                    <p class="discovery_paragraph">
+                <div class="search_discovery">
+                    <h2 class="search_discovery_heading">Réservez le menu qui vous convient</h2>
+                    <p class="search_discovery_paragraph">
                         Découvrez des restaurants d'exception, sélectionnés par nos soins
                     </p>
-                    <button class="discovery_btn"><a href="#">Explorer nos restaurants</a></button>
+                    <div class="search_discovery_btn"><a href="#">Explorer nos restaurants</a></div>
                 </div>
             </section>
             <section class="functioning">
                 <h2 class="functioning_heading">Fonctionnement</h2>
-                <ul>
+                <ul class="functioning_content">
                     <li>
-                        <i class="circle fa-solid fa-circle"></i>
-                        <i class="number fa-regular fa-1"></i>
-                        <i class="icon fa-solid fa-mobile-screen"></i>
+                        <i class="functioning_content_circle fa-solid fa-circle"></i>
+                        <i class="functioning_content_number fa-regular fa-1"></i>
+                        <i class="functioning_content_icon fa-solid fa-mobile-screen"></i>
                         Choisissez un restaurant
                     </li>
                     <li>
-                        <i class="circle fa-solid fa-circle"></i>
-                        <i class="number fa-regular fa-2"></i>
-                        <i class="icon fa-solid fa-list"></i>
+                        <i class="functioning_content_circle fa-solid fa-circle"></i>
+                        <i class="functioning_content_number fa-regular fa-2"></i>
+                        <i class="functioning_content_icon fa-solid fa-list"></i>
                         Composez votre menu
                     </li>
                     <li>
-                        <i class="circle fa-solid fa-circle"></i>
-                        <i class="number fa-regular fa-3"></i>
-                        <i class="icon fa-solid fa-store"></i>
+                        <i class="functioning_content_circle fa-solid fa-circle"></i>
+                        <i class="functioning_content_number fa-regular fa-3"></i>
+                        <i class="functioning_content_icon fa-solid fa-store"></i>
                         Dégustez au restaurant
                     </li>
                 </ul>
@@ -60,8 +60,9 @@
                             <p>
                                 Menilmontant
                             </p>
-                            <i class="fa-regular fa-heart"></i>
                         </a>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
                     </article>
                     <article>
                         <a href="menu-la-note-enchantee.html">
@@ -71,8 +72,9 @@
                             <p>
                                 Charonne
                             </p>
-                            <i class="fa-regular fa-heart"></i>
                         </a>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
                     </article>
                     <article>
                         <a href="menu-a-la-francaise.html">
@@ -81,8 +83,9 @@
                             <p>
                                 Cité Rouge
                             </p>
-                            <i class="fa-regular fa-heart"></i>
                         </a>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
                     </article>
                     <article>
                         <a href="menu-le-delice-des-sens.html">
@@ -91,8 +94,9 @@
                             <p>
                                 Folie-Méricourt
                             </p>
-                            <i class="fa-regular fa-heart"></i>
                         </a>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
                     </article>
                 </div>
             </section>
