Mise en place "form" dans "accueil"

--- a/accueil.html
+++ b/accueil.html
@@ -14,10 +14,10 @@
         </header>
         <main>
             <section class="search">
-                <p class="search_position">
+                <form class="search_position" method="post" action="#">
                     <i class="fa-solid fa-location-dot"></i>
-                    Paris, Belleville
-                </p>
+                    <input type="text" name="town" id="town" placeholder="Paris, Belleville">
+                </form>
                 <div class="search_discovery">
                     <h2 class="search_discovery_heading">Réservez le menu qui vous convient</h2>
                     <p class="search_discovery_paragraph">
