Duplication pages html "menu"

--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -14,5 +14,158 @@
                 ohmyfood
             </h1>
         </header>
+        <main class="menu">
+            <img class="restaurant-picture" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel">
+            <section class="card">
+                <h2 class="card_heading">
+                    Le délice des sens
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </h2>
+                <div class="card_content">
+                    <h3>ENTRÉES</h3>
+                    <ul>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Tartare de thon</h4>
+                                <p>
+                                    Assaisonné au yuzu
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                25€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Bouchée de homard croustillant</h4>
+                                <p>
+                                    Et sa farandole de petits légumes
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                35€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Velouté de cèpes</h4>
+                                <p>
+                                    Aux truffes
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                20€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                    </ul>
+                    <h3>PLATS</h3>
+                    <ul>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Poulet rôti aux herbes de Provence</h4>
+                                <p>
+                                    Et sa crème de truffe 
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                40€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Langouste rôtie</h4>
+                                <p>
+                                    Et ses légumes de saison 
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                35€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Côte de boeuf Angus</h4>
+                                <p>
+                                    Et sa purée de panais 
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                44€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                    </ul>
+                    <h3>DESSERTS</h3>
+                    <ul>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Farandole de desserts</h4>
+                                <p>
+                                    Du chef
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                18€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Crème brulée</h4>
+                                <p>
+                                    Revisitée
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                22€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Tiramisu</h4>
+                                <p>
+                                    À la noisette 
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                23€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                    </ul>
+                </div>
+                <div  class="card_btn"><a href="#">Commander</a></div>
+            </section>   
+        </main>
+        <footer>
+            <h3 class="logo">ohmyfood</h3>
+            <p>
+                <i class="fa-solid fa-utensils"></i>
+                <a href="#">Proposer un restaurant</a>
+                <br>
+                <i class="fa-solid fa-handshake-angle"></i>
+                <a href="#">Devenir partenaire</a>
+                <br>
+                <a href="#">Mentions légales</a>
+                <br>
+                <a href="mailto:ohmyfood@gmail.fr">Contact</a>
+            </p>
+        </footer>
     </body>
 </html>
