--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -14,5 +14,171 @@
                 ohmyfood
             </h1>
         </header>
+        <main class="menu">
+            <img class="restaurant-picture" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil">
+            <section class="card">
+                <h2 class="card_heading">
+                    La note enchantée
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </h2>
+                <div class="card_content">
+                    <h3>ENTRÉES</h3>
+                    <ul>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Ravioles de foie gras</h4>
+                                <p>
+                                    Accompagnés de leur crème à la truffe
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                25€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Caviar osciètre </h4>
+                                <p>
+                                    Sur blini à la farine de blé noir
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                35€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Homard et espuma de potiron</h4>
+                                <p>
+                                    Mariné aux zestes d'orange
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                20€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Foie gras de canard cuit entier</h4>
+                                <p>
+                                    Confiture de figue et pain toasté
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                35€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                    </ul>
+                    <h3>PLATS</h3>
+                    <ul>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Noix de coquilles Saint-Jacques</h4>
+                                <p>
+                                    Sur lit de purée de céleri-rave
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                40€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Langoustine poêlée</h4>
+                                <p>
+                                    Purée de patate douce 
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                35€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Mijoté de queue de boeuf</h4>
+                                <p>
+                                    Et riz sauvage aux zestes de citron 
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                44€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                    </ul>
+                    <h3>DESSERTS</h3>
+                    <ul>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Macaron noisette et chocolat</h4>
+                                <p>
+                                    Glace au caramel brun et sel de Guérande
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                18€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Baba au rhum revisité</h4>
+                                <p>
+                                    Avec son coulis de citron
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                22€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Tarte au citron meringuée</h4>
+                                <p>
+                                    Déstructurée 
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                23€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                    </ul>
+                </div>
+                <div  class="card_btn"><a href="#">Commander</a></div>
+            </section>   
+        </main>
+        <footer>
+            <h3 class="logo">ohmyfood</h3>
+            <p>
+                <i class="fa-solid fa-utensils"></i>
+                <a href="#">Proposer un restaurant</a>
+                <br>
+                <i class="fa-solid fa-handshake-angle"></i>
+                <a href="#">Devenir partenaire</a>
+                <br>
+                <a href="#">Mentions légales</a>
+                <br>
+                <a href="mailto:ohmyfood@gmail.fr">Contact</a>
+            </p>
+        </footer>
     </body>
 </html>
