--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -14,5 +14,158 @@
                 ohmyfood
             </h1>
         </header>
+        <main class="menu">
+            <img class="restaurant-picture" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington">
+            <section class="card">
+                <h2 class="card_heading">
+                    La palette du goût
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </h2>
+                <div class="card_content">
+                    <h3>ENTRÉES</h3>
+                    <ul>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Fricassée d'escargot</h4>
+                                <p>
+                                    Au piment d'Espelette
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                25€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Foie gras de canard mi-cuit</h4>
+                                <p>
+                                    Et ses copeaux de truffe noire
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                35€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Œuf au plat</h4>
+                                <p>
+                                    Assaisonné à la truffe sur lit de caviar
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                20€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                    </ul>
+                    <h3>PLATS</h3>
+                    <ul>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Filet de boeuf aux herbes</h4>
+                                <p>
+                                    Accompagné de sa ribambelle de légumes 
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                40€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Parmentier de queue de boeuf</h4>
+                                <p>
+                                    À la truffe noire sur sa purée de panais 
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                35€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Filet de turbot</h4>
+                                <p>
+                                    Aux agrumes
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                44€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                    </ul>
+                    <h3>DESSERTS</h3>
+                    <ul>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Paris-Brest</h4>
+                                <p>
+                                    Revisité
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                18€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Macaron au chocolat d'exception</h4>
+                                <p>
+                                    Et glace à la vanille de Madagascar
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                22€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                        <li class="card_content_dish">
+                            <div class="card_content_dish_entitled">
+                                <h4>Mousse au chocolat</h4>
+                                <p>
+                                    Au piment d'Espelette et à la truffe noire 
+                                </p>
+                            </div>
+                            <div class="card_content_dish_price">
+                                23€
+                            </div>
+                            <div class="card_content_dish--select"></div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </li>
+                    </ul>
+                </div>
+                <div  class="card_btn"><a href="#">Commander</a></div>
+            </section>   
+        </main>
+        <footer>
+            <h3 class="logo">ohmyfood</h3>
+            <p>
+                <i class="fa-solid fa-utensils"></i>
+                <a href="#">Proposer un restaurant</a>
+                <br>
+                <i class="fa-solid fa-handshake-angle"></i>
+                <a href="#">Devenir partenaire</a>
+                <br>
+                <a href="#">Mentions légales</a>
+                <br>
+                <a href="mailto:ohmyfood@gmail.fr">Contact</a>
+            </p>
+        </footer>
     </body>
 </html>
